--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
           <h1>Sedans</h1>
           <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
             or on your next road trip.</p>
-          <button class="button-sedans"><a href="#">Learn More</a></button>
+          <button class="button-sedans">Learn More</button>
         </div>
         <div class="col-lg-4 hero-suvs">
           <img src="./src/images/icon-suvs.svg" alt="SUVs">
           <h1>SUVs</h1>
           <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
             and off-road adventures.</p>
-          <button class="button-suvs"><a href="#">Learn More</a></button>
+          <button class="button-suvs">Learn More</button>
         </div>
         <div class="col-lg-4 hero-luxury">
           <img src="./src/images/icon-luxury.svg" alt="Luxury">
           <h1>Luxury</h1>
           <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
             rental and arrive in style.</p> 
-          <button class="button-luxury"><a href="#">Learn More</a></button>   
+          <button class="button-luxury">Learn More</button>   
         </div>
       </div>
     </div>
